--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dots_indicator: ^4.0.1
   animated_text_kit: ^4.2.1
   visibility_detector: ^0.4.0+2
+  blobs: ^2.0.0
 
 dev_dependencies:
   flutter_test:
