--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,9 @@
 .pub-cache/
 .pub/
 /build/
+build/
 
 # Web related
-lib/generated_plugin_registrant.dart
 
 # Symbolication related
 app.*.symbols
